// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
.emotion-2 {
  position: relative;
}

.emotion-2 input {
  padding-right: 2rem;
}

.emotion-1 {
  position: absolute;
  right: 1px;
  background: transparent;
  border: none;
  cursor: pointer;
  height: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: 0;
  color: #53595E;
  padding: 1px 6px;
}

.emotion-1:hover {
  color: #D83A2E;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

<div
  class="emotion-2"
>
  <input />
  <span
    class="emotion-1"
    role="button"
    tabindex="-1"
    title="Limpar"
  >
    <svg
      aria-hidden="true"
      class="emotion-0"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M18.36 7.05l-1.41-1.41L12 10.59 7.05 5.64 5.64 7.05 10.59 12l-4.95 4.95 1.41 1.41L12 13.41l4.95 4.95 1.41-1.41L13.41 12l4.95-4.95z"
        data-name="times"
      />
    </svg>
  </span>
</div>
`;

exports[`should render correctly with button 1`] = `
.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-5 {
  position: relative;
}

.emotion-5 input {
  padding-right: 4.5rem;
}

.emotion-1 {
  position: absolute;
  right: 2.5rem;
  background: transparent;
  border: none;
  cursor: pointer;
  height: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: 0;
  color: #53595E;
  padding: 1px 6px;
}

.emotion-1:hover {
  color: #D83A2E;
}

.emotion-4 {
  position: absolute;
  background-color: #F2F2F7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #2D343B;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-3 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-3 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-3:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-3:not(:disabled):hover {
  background-color: rgba(45,52,59,0.1);
}

.emotion-3:focus {
  box-shadow: none;
}

<div
  class="emotion-5"
>
  <input />
  <span
    class="emotion-1"
    role="button"
    tabindex="-1"
    title="Limpar"
  >
    <svg
      aria-hidden="true"
      class="emotion-0"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M18.36 7.05l-1.41-1.41L12 10.59 7.05 5.64 5.64 7.05 10.59 12l-4.95 4.95 1.41 1.41L12 13.41l4.95 4.95 1.41-1.41L13.41 12l4.95-4.95z"
        data-name="times"
      />
    </svg>
  </span>
  <span
    class="emotion-4"
  >
    <button
      class="emotion-3"
      tabindex="-1"
      type="button"
    >
      <span>
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M20.21 18.79l-5.32-5.32A5.93 5.93 0 0 0 16 10a6 6 0 1 0-6 6 5.93 5.93 0 0 0 3.47-1.11l5.32 5.32zM10 14a4 4 0 1 1 4-4 4 4 0 0 1-4 4z"
            data-name="search"
          />
        </svg>
      </span>
    </button>
  </span>
</div>
`;

exports[`should render correctly with left position 1`] = `
.emotion-1 {
  position: absolute;
  right: 1px;
  background: transparent;
  border: none;
  cursor: pointer;
  height: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: 0;
  color: #53595E;
  padding: 1px 6px;
}

.emotion-1:hover {
  color: #D83A2E;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-4 {
  position: relative;
}

.emotion-4 input {
  padding-left: 3rem;
  padding-right: 2rem;
}

.emotion-3 {
  position: absolute;
  background-color: #F2F2F7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  left: 1px;
}

.emotion-2 {
  fill: currentColor;
  font-size: 1.5rem;
  border-radius: inherit;
}

.emotion-2:focus {
  box-shadow: none;
}

<div
  class="emotion-4"
>
  <input />
  <span
    class="emotion-1"
    role="button"
    tabindex="-1"
    title="Limpar"
  >
    <svg
      aria-hidden="true"
      class="emotion-0"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M18.36 7.05l-1.41-1.41L12 10.59 7.05 5.64 5.64 7.05 10.59 12l-4.95 4.95 1.41 1.41L12 13.41l4.95 4.95 1.41-1.41L13.41 12l4.95-4.95z"
        data-name="times"
      />
    </svg>
  </span>
  <span
    class="emotion-3"
  >
    <svg
      aria-hidden="true"
      class="emotion-2"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M20.21 18.79l-5.32-5.32A5.93 5.93 0 0 0 16 10a6 6 0 1 0-6 6 5.93 5.93 0 0 0 3.47-1.11l5.32 5.32zM10 14a4 4 0 1 1 4-4 4 4 0 0 1-4 4z"
        data-name="search"
      />
    </svg>
  </span>
</div>
`;

exports[`should render correctly without clear icon 1`] = `
.emotion-1 {
  position: absolute;
  background-color: #F2F2F7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
  border-radius: inherit;
}

.emotion-0:focus {
  box-shadow: none;
}

.emotion-2 {
  position: relative;
}

.emotion-2 input {
  padding-right: 3rem;
}

<div
  class="emotion-2"
>
  <input />
  <span
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-0"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M20.21 18.79l-5.32-5.32A5.93 5.93 0 0 0 16 10a6 6 0 1 0-6 6 5.93 5.93 0 0 0 3.47-1.11l5.32 5.32zM10 14a4 4 0 1 1 4-4 4 4 0 0 1-4 4z"
        data-name="search"
      />
    </svg>
  </span>
</div>
`;

exports[`should render correctly without clear icon AND left position 1`] = `
.emotion-1 {
  position: absolute;
  background-color: #F2F2F7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  left: 1px;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
  border-radius: inherit;
}

.emotion-0:focus {
  box-shadow: none;
}

.emotion-2 {
  position: relative;
}

.emotion-2 input {
  padding-left: 3rem;
}

<div
  class="emotion-2"
>
  <input />
  <span
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-0"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M20.21 18.79l-5.32-5.32A5.93 5.93 0 0 0 16 10a6 6 0 1 0-6 6 5.93 5.93 0 0 0 3.47-1.11l5.32 5.32zM10 14a4 4 0 1 1 4-4 4 4 0 0 1-4 4z"
        data-name="search"
      />
    </svg>
  </span>
</div>
`;
